--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-mongodb+srv://faraz:fJ2PrhDJkaf6KdK4@cluster0.dtsaijf.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://faraz:fJ2PrhDJkaf6KdK4@cluster0.dtsaijf.mongodb.net/faraz?retryWrites=true&w=majority&appName=Cluster0
